# rust-keylock-browser-extensions

./: .gitignore  README.md
extension/: README.md  background.js  contentscript.js  manifest.json  storage.js
extension/options/: options.css  options.html  options.js
extension/pageActionPopup/: pageActionPopup.html  pageActionPopup.js
extension/popup/: popup.css  popup.html  popup.js
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
scripts/: build.sh
